@@ -22,7 +22,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Map;
@@ -39,6 +38,9 @@ import org.apache.ignite.configuration.schemas.runner.ClusterConfiguration;
 import org.apache.ignite.configuration.schemas.runner.NodeConfiguration;
 import org.apache.ignite.configuration.schemas.store.DataStorageConfiguration;
 import org.apache.ignite.configuration.schemas.table.ColumnTypeValidator;
+import org.apache.ignite.configuration.schemas.table.HashIndexConfigurationSchema;
+import org.apache.ignite.configuration.schemas.table.PartialIndexConfigurationSchema;
+import org.apache.ignite.configuration.schemas.table.SortedIndexConfigurationSchema;
 import org.apache.ignite.configuration.schemas.table.TableValidator;
 import org.apache.ignite.configuration.schemas.table.TablesConfiguration;
 import org.apache.ignite.internal.baseline.BaselineManager;
@@ -66,6 +68,7 @@ import org.apache.ignite.lang.NodeStoppingException;
 import org.apache.ignite.network.ClusterLocalConfiguration;
 import org.apache.ignite.network.ClusterService;
 import org.apache.ignite.network.MessageSerializationRegistryImpl;
+import org.apache.ignite.network.NettyBootstrapFactory;
 import org.apache.ignite.network.scalecube.ScaleCubeClusterServiceFactory;
 import org.apache.ignite.rest.RestModule;
 import org.apache.ignite.table.manager.IgniteTables;
@@ -106,6 +109,9 @@ public class IgniteImpl implements Ignite {
 
     /** Cluster service (cluster network manager). */
     private final ClusterService clusterSvc;
+    
+    /** Netty bootstrap factory. */
+    private final NettyBootstrapFactory nettyBootstrapFactory;
 
     /** Raft manager. */
     private final Loza raftMgr;
@@ -160,13 +166,17 @@ public class IgniteImpl implements Ignite {
                 List.of(),
                 List.of()
         );
+    
+        NetworkConfiguration networkConfiguration = nodeCfgMgr.configurationRegistry().getConfiguration(NetworkConfiguration.KEY);
+    
+        var clusterLocalConfiguration = new ClusterLocalConfiguration(name, new MessageSerializationRegistryImpl());
+    
+        nettyBootstrapFactory = new NettyBootstrapFactory(networkConfiguration, clusterLocalConfiguration.getName());
 
         clusterSvc = new ScaleCubeClusterServiceFactory().createClusterService(
-                new ClusterLocalConfiguration(
-                        name,
-                        new MessageSerializationRegistryImpl()
-                ),
-                nodeCfgMgr.configurationRegistry().getConfiguration(NetworkConfiguration.KEY)
+                clusterLocalConfiguration,
+                networkConfiguration,
+                nettyBootstrapFactory
         );
 
         raftMgr = new Loza(clusterSvc, workDir);
@@ -190,8 +200,8 @@ public class IgniteImpl implements Ignite {
                         ColumnTypeValidator.class, Set.of(ColumnTypeValidatorImpl.INSTANCE)
                 ),
                 new DistributedConfigurationStorage(metaStorageMgr, vaultMgr),
-                Collections.singletonList(ExtendedTableConfigurationSchema.class),
-                List.of()
+                List.of(ExtendedTableConfigurationSchema.class),
+                List.of(HashIndexConfigurationSchema.class, SortedIndexConfigurationSchema.class, PartialIndexConfigurationSchema.class)
         );
 
         baselineMgr = new BaselineManager(
@@ -216,7 +226,12 @@ public class IgniteImpl implements Ignite {
 
         restModule = new RestModule(nodeCfgMgr, clusterCfgMgr);
 
-        clientHandlerModule = new ClientHandlerModule(qryEngine, distributedTblMgr, nodeCfgMgr.configurationRegistry());
+        clientHandlerModule = new ClientHandlerModule(
+                qryEngine,
+                distributedTblMgr,
+                nodeCfgMgr.configurationRegistry(),
+                nettyBootstrapFactory
+        );
     }
 
     /**
@@ -269,6 +284,7 @@ public class IgniteImpl implements Ignite {
 
             // Start the remaining components.
             List<IgniteComponent> otherComponents = List.of(
+                    nettyBootstrapFactory,
                     clusterSvc,
                     raftMgr,
                     metaStorageMgr,
@@ -319,7 +335,7 @@ public class IgniteImpl implements Ignite {
 
         if (explicitStop.get()) {
             doStopNode(List.of(vaultMgr, nodeCfgMgr, clusterSvc, raftMgr, metaStorageMgr, clusterCfgMgr, baselineMgr,
-                    distributedTblMgr, qryEngine, restModule, clientHandlerModule));
+                    distributedTblMgr, qryEngine, restModule, clientHandlerModule, nettyBootstrapFactory));
         }
     }
 
@@ -380,6 +396,13 @@ public class IgniteImpl implements Ignite {
      */
     public ClientHandlerModule clientHandlerModule() {
         return clientHandlerModule;
+    }
+
+    /**
+     * Returns the id of the current node.
+     */
+    public String id() {
+        return clusterSvc.topologyService().localMember().id();
     }
 
     /**
